--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body{
 
 main{
 	position:relative;
-    height: 70vh;
+    /*height: 70vh;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,7 +104,6 @@ header img{
     font-size: 35px;
 }
 
-
 .radioVero{accent-color: green;}
 .radioFalso{accent-color: red;}
 
@@ -118,4 +117,10 @@ header img{
     .openES{
         max-width: 90vw;
     }
+}
+
+#contenitore{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
